# mineru-mcp

./: README.md  pyproject.toml
src/mineru_mcp_server/: main.py
tests/: test_cli.py  test_pdf_discovery_and_format.py  test_tool_names_and_single_pdf.py
